--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     </header>
     <main>
         <section class="product">
-            <img src="https://cdn.iset.io/assets/40180/produtos/263/colar.pingente-diamante-laser-em-prata-925-vazado-2.jpg" alt="Semi Joia 1">
+            <img src="Image01.jpg" alt="Semi Joia 1">
             <h2>Colar com Pingente de Pedra</h2>
             <p class="price">R$ 99,99</p>
             <button>Adicionar ao Carrinho</button>
         </section>
         <section class="product">
-            <img src="https://cdn.awsli.com.br/600x450/991/991056/produto/90286636/ceb2f98e29.jpg" alt="Semi Joia 2">
+            <img src="Image02.jpg" alt="Semi Joia 2">
             <h2>Brincos de Prata</h2>
             <p class="price">R$ 79,99</p>
             <button>Adicionar ao Carrinho</button>
