--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Adicione mais produtos conforme necessário -->
     </main>
     <footer>
-        <p>&copy; 2024 Produtos de Semi Joias</p>
+        <p>&copy; 2024 Produtos de Jóias e Semi Joias</p>
     </footer>
 
     <script src="script.js"></script>
